--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Arun
-email: your-email@example.com
+email: dvcoolarun@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "dvcoolarun.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: dvcoolarun
+github_username:  dvcoolarun
 
 # Build settings
 remote_theme: jekyll/minima@3cdd14d
